syntax = "proto3";

option csharp_namespace = "Answer.Api.Protos";

package user;

import "google/api/annotations.proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/api/users/{id}"
    };
  }
  
  rpc ListUsers (ListUsersRequest) returns (stream UserResponse) {
    option (google.api.http) = {
      get: "/api/users"
    };
  }
  
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/api/users"
      body: "*"
    };
  }
  
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      put: "/api/users/{id}"
      body: "*"
    };
  }
  
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/api/users/{id}"
    };
  }
}

message GetUserRequest {
  string id = 1;
}

message ListUsersRequest {
}

message CreateUserRequest {
  string name = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
}
